<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:background="#f1f1f1"
    android:id="@+id/postevent_layout"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/caption_holder"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="40"
            android:gravity="right"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/category_img"
                android:src="@drawable/ic_road_crash"
                android:layout_width="120dp"
                android:layout_height="120dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="60"
            android:gravity="left|center">

            <TextView
                android:id="@+id/event_type"
                android:textSize="20sp"
                android:textColor="#111"
                android:paddingRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:weightSum="100"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <LinearLayout
            android:layout_weight="100"
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <LinearLayout
                        android:background="@drawable/circular_location_holder"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ImageView
                            android:src="@drawable/ic_location_on_black_24dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/event_location"
                            android:textSize="15sp"
                            android:textColor="#fff"
                            android:paddingRight="20dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Getting location..."/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_marginLeft="20dp"
            android:background="@drawable/circular_location_holder"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="140dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:backgroundTint="#111"
                    android:id="@+id/event_caption"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:layout_width="wrap_content"
                    android:hint="Event Caption"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_below="@+id/caption_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="100"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="200dp">
            <ImageView
                android:id="@+id/image_1"
                android:layout_width="200dp"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="50"
            android:layout_width="0dp"
            android:layout_height="200dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/image_2"/>
        </LinearLayout>
    </LinearLayout>
    <!--Buttons Area-->
    <LinearLayout
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/post_btn"
            android:layout_width="100dp"
            android:gravity="center"
            android:background="@drawable/camera_designbtn"
            android:layout_height="50dp">
            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/ic_send_black_24dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/camera_btn"
            android:layout_width="100dp"
            android:gravity="center"
            android:background="@drawable/camera_designbtn"
            android:layout_height="50dp">
            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/ic_camera_enhance_black_24dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>