<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/road"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:background="#9111"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/main_header"
                android:background="@drawable/activity_main_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingBottom="10dp"
                >

            </LinearLayout>


            <LinearLayout
                android:id="@+id/main_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/main_header"
                android:layout_marginTop="-1dp"
                android:orientation="vertical">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="120dp"
                            android:src="@drawable/ic_trapiclogo32"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_below="@+id/main_body"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fff"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="Register an account"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:background="@drawable/bordered_yellow"
                            android:layout_width="30dp"
                            android:gravity="center"
                            android:layout_height="30dp">
                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/login_email"/>
                        </LinearLayout>
                        <EditText
                            android:backgroundTint="#0111"
                            android:layout_marginStart="10dp"
                            android:hint="Email Address"
                            android:id="@+id/reg_email"
                            android:textSize="13dp"
                            android:textColorHint="#fff"
                            android:inputType="textEmailAddress"
                            android:textColor="#fff"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="15dp"
                        android:background="#fff">

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:background="@drawable/bordered_yellow"
                            android:gravity="center"
                            android:layout_width="30dp"
                            android:layout_height="30dp">
                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/login_email"/>
                        </LinearLayout>
                        <EditText
                            android:backgroundTint="#0111"
                            android:layout_marginStart="10dp"
                            android:hint="Firstname"
                            android:id="@+id/reg_fname"
                            android:textSize="13dp"
                            android:textColorHint="#fff"
                            android:textColor="#fff"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="15dp"
                        android:background="#fff">

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:background="@drawable/bordered_yellow"
                            android:gravity="center"
                            android:layout_width="30dp"
                            android:layout_height="30dp">
                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/login_email"/>
                        </LinearLayout>
                        <EditText
                            android:backgroundTint="#0111"
                            android:layout_marginStart="10dp"
                            android:hint="Lastname"
                            android:textSize="13dp"
                            android:id="@+id/reg_lname"
                            android:textColorHint="#fff"
                            android:textColor="#fff"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="15dp"
                        android:background="#fff">

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:background="@drawable/bordered_yellow"
                            android:gravity="center"
                            android:layout_width="30dp"
                            android:layout_height="30dp">
                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/login_password"/>
                        </LinearLayout>
                        <EditText
                            android:backgroundTint="#0111"
                            android:layout_marginStart="10dp"
                            android:hint="Password"
                            android:inputType="textPassword"
                            android:textSize="13dp"
                            android:id="@+id/reg_pw1"
                            android:textColorHint="#fff"
                            android:textColor="#fff"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="15dp"
                        android:background="#fff">

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:background="@drawable/bordered_yellow"
                            android:gravity="center"
                            android:layout_width="30dp"
                            android:layout_height="30dp">
                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/login_password"/>
                        </LinearLayout>
                        <EditText
                            android:backgroundTint="#0111"
                            android:layout_marginStart="10dp"
                            android:hint="Confirm Password"
                            android:id="@+id/reg_pw2"
                            android:inputType="textPassword"
                            android:textSize="13dp"
                            android:textColorHint="#fff"
                            android:textColor="#fff"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="50dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/reg_btn"
                            android:background="@drawable/bordered_yellow"
                            android:text="Register"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <Button
                            android:layout_marginStart="5dp"
                            android:background="@drawable/guest_btn"
                            android:textColor="#fff"
                            android:id="@+id/login_link"
                            android:text="Login an account"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/guest_btn"
                            android:background="@drawable/bordered_yellow"
                            android:paddingStart="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Be a guest"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginTop="15dp"
                        android:background="#fff">

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>



</LinearLayout>